image stretching fixed

--- a/style.css
+++ b/style.css
@@ -83,13 +83,14 @@ body {
 @media (max-width: 600px) {
   .img-mask {
     top: -2px;
+    height: 100%;
   }
 }
 
 
 
 #container {
-  width: inherit;
+  width: 100%;
 }
 
 /* Layout */
@@ -120,10 +121,6 @@ body {
 
 /* Shapes */
 .shape {
-  opacity: 1;
-}
-
-#shapeCircle {
   opacity: 1;
 }
 
@@ -158,7 +155,7 @@ button {
   padding: 0;
   color: beige;
   background:black;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
   outline: inherit;
   border: none;
   cursor: pointer;
